# zvec

./: .gitignore  .gitmodules  README.md  pyproject.toml  search.yaml  search_original.yaml
.github/ISSUE_TEMPLATE/: benchmark.yml  enhancement.yml  integration.yml  profiling.yml
.github/workflows/: android_build.yml  build_test_wheel.yml  continuous_bench.yml  linux_arm64_docker_ci.yml  linux_x64_docker_ci.yml  mac_arm64_ci.yml
.github/workflows/scripts/: run_vdb.sh  upload_bench_results.py
buffer_pool/: bench.cc  buffer_pool.h  generate_bin.cc  malloc_container.h  mmap_container.h  readme.md
cmake/: bazel.cmake
examples/c++/: CMakeLists.txt  main.cc
python/tests/: test_collection_hnsw_rabitq.py
src/ailego/: version.i
src/ailego/algorithm/: kmeans.h
src/ailego/buffer/: buffer_manager.cc  buffer_manager.h  buffer_pool.cc  buffer_pool.h
src/ailego/container/: vector_array.h
src/ailego/internal/: cpu_features.cc
src/ailego/io/: file.cc  mmap_file.h
src/ailego/math_batch/: distance_batch.h  inner_product_distance_batch.h
src/ailego/utility/: concurrency_helper.cc  file_helper.h  float_helper.cc  math_helper.h  memory_helper.cc  string_helper.cc  type_helper.h
src/binding/python/: CMakeLists.txt
src/core/algorithm/: CMakeLists.txt
src/core/framework/: index_error.h  index_mapping.cc
src/core/interface/: CMakeLists.txt  index.cc  index.h  index_param.h
src/core/mixed_reducer/: mixed_streamer_reducer.cc
src/core/quantizer/: binary_converter.cc  binary_reformer.cc  cosine_converter.cc  cosine_reformer.cc  half_float_converter.cc  half_float_reformer.cc  integer_quantizer_converter.cc  integer_quantizer_reformer.cc  mips_converter.cc  mips_reformer.cc
src/core/utility/: buffer1_storage.cpp  buffer2_storage.cpp  buffer_storage.cc  file_dumper.cc  file_read_storage.cc  memory_storage.cc
src/db/: CMakeLists.txt  collection.cc
src/db/common/: concurrent_roaring_bitmap.h  config.cc  constants.h  error_code.h  file_helper.cc  file_helper.h  global_resource.cc  global_resource.h  logger.h  rocksdb_context.h  status.cc
tests/db/: CMakeLists.txt  collection_test.cc
tools/core/: bench_original.cc  helper.h  local_builder.cc  recall.cc  recall_original.cc
(+185 files in other folders)
